Updated to scala 2.11.1, akka 2.3.4 and spray 1.3.1.
Conflicts:
	SETUP.md